FIX: Resolve wrapper type warnings.